logo not fixed on mobile

--- a/src/components/Header/styles/styles.scss
+++ b/src/components/Header/styles/styles.scss
@@ -79,7 +79,7 @@
     background-size: 100% auto;
 
     @media (#{ $phone }) {
-      position: fixed;
+     /* position: fixed;*/
 
       width: 114px;
       height: 40px;
